--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "proxy": "http://localhost:8001",
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "build": "if-node-version '>= 17' && react-scripts --openssl-legacy-provider build || react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public --ci",
