Update Circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,32 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
       - run: npm test
+  deploy:
+    machine:
+      enabled: true
 
+    working_directory: ~/client
+
+    steps:
+      - add_ssh_keys:
+          fingerprints:
+            - "0f:f6:ac:33:48:7e:86:f5:d6:88:f1:b0:15:f0:03:0e"
+      - checkout
+      - run:
+          name: Push Master to Production
+          command: |
+            git push https://github.com/mzparulina/scheduler master:production
 workflows:
   version: 2
-  test:
+  test_and_deploy:
     jobs:
-      - build
+      - build:
+          filters:
+            branches:
+              ignore: production
+      - deploy:
+          filters:
+            branches:
+              ignore: production
+          requires:
+            - build
